fix(UI) make buttons bigger for better use on mobile

--- a/src/app/+live-game/button-info/button-info.component.scss
+++ b/src/app/+live-game/button-info/button-info.component.scss
@@ -36,6 +36,7 @@ button {
   justify-content: center;
   margin: 0 auto;
   width: 1100px;
+  height: 50px;
 }
 
 .left-arrow {
@@ -59,7 +60,7 @@ button {
   background: $base-background;
   border: 1px solid $button-border;
   display: flex;
-  height: 40px;
+  height: 50px;
   justify-content: center;
   width: 282px;
 }
